made the layout of the sign up page, and made a file to implement the vaildation of password

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Sign Up</title>
 </head>
 <body>
-    
+    <div class="body">
+        <div class="image-section">
+            <img src="./main.jpeg" alt="brand related image">
+            <p class="brand-name">Chill.</p>
+        </div>
+        <div class="form-section">
+
+        </div>
+    </div>
+    <script src="./validation.js"></script>
 </body>
 </html>
