--- a/index.html
+++ b/index.html
@@ -15,7 +15,39 @@
             <p class="brand-name">Chill.</p>
         </div>
         <div class="form-section">
-
+            <form action="" method="get">
+                <h2>Sign up into the <em>Chill </em> zone</h2>
+                <div class="first-name-section">
+                    <label for="first_name">First Name</label>
+                    <input type="text" name="first_name" required placeholder="John">
+                </div>
+                <div class="last-name-section">
+                    <label for="last_name">Last Name</label>
+                    <input type="text" name="last_name" required placeholder="Smith">
+                </div>
+                <div class="email-section">
+                    <label for="email">Email Address</label>
+                    <input type="email" name="email" required checked placeholder="example@something.com">
+                </div>
+                <div class="phone-section">
+                    <label for="phone">Phone Number</label>
+                    <input type="number" name="phone" required placeholder="07xxxxxxxxx">
+                </div>
+                <div class="password-section">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" required minlength="8">
+                </div>
+                <div class="password-section">
+                    <label for="password">Password Confirmation</label>
+                    <input type="password" name="password" required min="8">
+                </div>
+                <div class="button-section">
+                    <button type="submit">Create An Account</button>
+                </div>
+                <p>
+                    <a href="">Already have an account?</a>
+                </p>
+            </form>
         </div>
     </div>
     <script src="./validation.js"></script>
